# PortfolioManager

./: .gitignore  README.md  app.js  index.html  pyproject.toml  requirements.txt  styles.css
app/: __init__.py  auth.py  db.py  i18n.py  main.py  migrations.py  models.py  portfolio.py  portfolio_utils.py  schemas.py
app/static/css/: styles.css
app/static/js/: dashboard.js
app/templates/: base.html  dashboard.html  login.html  register.html
static/: app.js  styles.css
