[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Full-stack demo for tracking a personal portfolio with login, holdings management, and a visual allocation chart."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "email-validator==2.2.0",
  "sqlalchemy==2.0.35",
]
